# projects

./: README.md  THEWORLDDOCS
GBS/: .gitignore  README.md  pyproject.toml
GBS/catalogs/: arxiv_articles.json  wikibooks_technical_books.json
GBS/corpus/arxiv/2026/a-field-guide-to-decision-making/: manifest.json
GBS/corpus/arxiv/2026/a-weighted-angle-distance-on-strings/: manifest.json
GBS/examples/: example_paper.txt
GBS/feeds/arxiv_daily/: 20260422.json
GBS/scripts/: import_arxiv.py  import_gutendex_technical_books.py  import_wikibooks_technical_books.py
GBS/src/gbs/: cli.py
garuda/: AGENTS.md  CMakeLists.txt  Cargo.toml  MODAL.md  modal_app.py  package-lock.json  package.json
garuda/data/: rust-stockfish-openings.fen
garuda/garuda/src/Analysis/: GarudaAnalysis.cpp  GarudaAnalysisPass.cpp  GarudaAnalysisPrinter.cpp
garuda/garuda/src/Domain/: AbstractDomain.cpp  BooleanDomain.cpp  ConstantDomain.cpp  IntegerDomain.cpp  IntervalDomain.cpp  PointerDomain.cpp  ValueDomain.cpp
garuda/garuda/src/Group/: GroupDomain.cpp  GroupDomainBuilder.cpp  GroupDomainManager.cpp  GroupDomainVisitor.cpp
garuda/garuda/src/Update/: ProgressUpdate.cpp  ProgressUpdateNotifier.cpp  ProgressUpdateTracker.cpp  SubsequentProgressUpdate.cpp
garuda/garuda/test/: CMakeLists.txt
garuda/garuda/test/Domain/: DomainTest.cpp
garuda/garuda/test/Group/: GroupDomainTest.cpp
garuda/garuda/test/Update/: ProgressUpdateTest.cpp
garuda/garuda/tool/: main.cpp
garuda/js/: tsconfig.json
garuda/js/src/: crypto_basis.ts  index.ts
garuda/js/src/chess/: cli.js  distill.js  distributed.js  mcts-stockfish.js  mcts-vs-stockfish.pgn  nes-tuner.js  neural-model.js
garuda/js/src/crypto/: blockchain-zkp.js
garuda/js/src/llvm/: datalayer.js
garuda/js/src/mcts/: distributed.js  explorer.js  gpuzeta.js  index.js  light.js  mathproof.js  optimized.js  proof.js  prove-rh.js  rhsuper.js  riemann.js  solver.js  supercompile.js  tree.js  zetlang.js
garuda/js/src/p2p/: network.js
garuda/js/src/tests/: all.test.js
garuda/js/src/utils/: structures.js
garuda/lib/: LLVM.rakumod
garuda/lib/LLVM/: Subset.pm6
garuda/lib/LLVM/Subset/: Analysis.pm6
garuda/python/garuda/: __init__.py
garuda/src/: blockchain.rs  chess.rs  lib.rs  mentalic.rs  p2p.rs  stats.rs  stats_test.rs
garuda/src/analysis/: mod.rs
garuda/src/domains/: mod.rs
(+7378 files in other folders)
